--- a/app/src/main/res/values/ic_lapt_background.xml
+++ b/app/src/main/res/values/ic_lapt_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_lapt_background">#F1E5E5</color>
+    <color name="ic_lapt_background">#FFFFFF</color>
 </resources>
