--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".MainActivity">
+
 
     <EditText
         android:id="@+id/et_Usename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="3dp"
         android:layout_marginBottom="21dp"
-        android:background="#ffffff"
+        android:background="#C4DFF4"
         android:ems="10"
         android:hint="@string/use"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:padding="12dp"
         app:layout_constraintBottom_toTopOf="@+id/et_Password"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
@@ -27,9 +29,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="57dp"
-        android:background="#ffffff"
+        android:background="#C4DFF4"
         android:ems="10"
         android:hint="@string/pass"
+        android:importantForAutofill="no"
         android:inputType="textPassword"
         android:padding="12dp"
         app:layout_constraintBottom_toTopOf="@+id/bt_sign"
@@ -41,13 +44,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
-        android:layout_marginBottom="104dp"
-        android:background="@color/ic_lap_background"
+        android:layout_marginBottom="97dp"
+        android:backgroundTint="#90C7F3"
         android:onClick="sign"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:text="@string/btn"
-        android:textColor="@color/black"
+        android:textColor="@color/ic_lapt_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/et_Password"
         app:layout_constraintTop_toBottomOf="@+id/et_Password"
@@ -55,15 +58,15 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="386dp"
+        android:layout_width="240dp"
         android:layout_height="0dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="63dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginBottom="64dp"
+        android:importantForAccessibility="no"
         app:layout_constraintBottom_toTopOf="@+id/et_Usename"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.168"
         app:srcCompat="@drawable/pppp" />
 
 
