--- a/app/src/main/res/layout/mainpage1.xml
+++ b/app/src/main/res/layout/mainpage1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/et_first"
@@ -11,8 +11,8 @@
 
     <LinearLayout
         android:id="@+id/et_second"
-        android:layout_width="match_parent"
-        android:layout_height="162dp"
+        android:layout_width="wrap_content"
+        android:layout_height="180dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -27,13 +27,15 @@
         android:id="@+id/et_third"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#D5E1E6"
+        android:layout_marginTop="180dp"
+        android:background="#EFF3F4"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView11"
             android:layout_width="208dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:fontFamily="serif"
             android:text="@string/enter"
             android:textAlignment="center"
@@ -46,13 +48,15 @@
         android:id="@+id/et_forth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#D5E1E6"
+        android:layout_marginTop="200dp"
+        android:background="#EFF3F4"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="208dp"
             android:layout_height="31dp"
+            android:layout_marginLeft="10dp"
             android:text="@string/type"
             android:textAlignment="gravity"
             android:textColor="@color/design_default_color_secondary_variant"
@@ -73,13 +77,15 @@
         android:id="@+id/et_fifth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#D5E1E6"
+        android:layout_marginTop="240dp"
+        android:background="#EFF3F4"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="209dp"
             android:layout_height="32dp"
+            android:layout_marginLeft="10dp"
             android:text="@string/name1"
             android:textAlignment="textStart"
             android:textColor="@color/design_default_color_secondary_variant"
@@ -100,17 +106,20 @@
         android:id="@+id/et_sixth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#D5E1E6">
+        android:layout_marginTop="280dp"
+        android:background="#EFF3F4">
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="211dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="@string/invoice"
             android:textAlignment="textStart"
             android:textColor="@color/design_default_color_secondary_variant"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:layout_marginLeft="10dp" />
 
         <EditText
             android:id="@+id/editTextText3"
@@ -126,13 +135,15 @@
         android:id="@+id/et_third"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#E3D4D6"
+        android:layout_marginTop="350dp"
+        android:background="#EFF3F4"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="208dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:fontFamily="serif"
             android:text="@string/details"
             android:textAlignment="center"
@@ -143,15 +154,17 @@
 
     <LinearLayout
         android:id="@+id/et_sixth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginTop="375dp"
         android:background="#D5E1E6"
-        android:backgroundTint="#E3D4D6">
+        android:backgroundTint="#EFF3F4">
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_weight="10"
             android:text="@string/mat"
             android:textAlignment="center" />
@@ -160,6 +173,7 @@
             android:id="@+id/textView8"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_weight="2"
             android:text="@string/number"
             android:textAlignment="center" />
@@ -177,7 +191,8 @@
         android:id="@+id/et_sevenn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#E3D4D6"
+        android:layout_marginTop="400dp"
+        android:background="#EFF3F4"
         android:orientation="horizontal">
 
         <EditText
@@ -215,12 +230,15 @@
         android:id="@+id/et_sixx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#E3D4D6">
+        android:layout_marginTop="440dp"
+        android:background="#EFF3F4">
 
         <TextView
             android:id="@+id/textView66"
-            android:layout_width="211dp"
+            android:layout_width="133dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="15dp"
             android:text="@string/total1"
             android:textAlignment="center"
             android:textColor="@color/design_default_color_secondary_variant"
@@ -229,8 +247,9 @@
 
         <EditText
             android:id="@+id/editTextText33"
-            android:layout_width="196dp"
-            android:layout_height="wrap_content"
+            android:layout_width="248dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:autofillHints="@string/total1"
             android:ems="10"
             android:hint="@string/total1"
@@ -238,35 +257,42 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button22"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/Save"
-        android:textColor="@color/ic_lap_background"
-        android:textStyle="bold"
-        tools:backgroundTint="#C4B0E6"
-        tools:layout_editor_absoluteX="411dp" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="500dp"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#817C8A"
-        android:onClick="gogo"
-        android:text="@string/report"
-        android:textColor="@color/ic_lap_background"
-        tools:layout_editor_absoluteX="411dp" />
+        <Button
+            android:id="@+id/button22"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Save"
+            android:textColor="@color/ic_lap_background"
+            android:textStyle="bold"
+            android:backgroundTint="#90C7F3"
+            tools:layout_editor_absoluteX="411dp" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#817C8A"
-        android:onClick="gogo"
-        android:text="@string/sit"
-        android:textColor="@color/ic_lap_background"
-        tools:layout_editor_absoluteX="411dp" />
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#90C7F3"
+            android:text="@string/sit"
+            android:textColor="@color/ic_lap_background"
+            tools:layout_editor_absoluteX="411dp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#90C7F3"
+            android:onClick="gogo"
+            android:text="@string/report"
+            android:textColor="@color/ic_lap_background"
+            tools:layout_editor_absoluteX="411dp" />
+
+    </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
