--- a/app/src/main/res/layout/mainpage1.xml
+++ b/app/src/main/res/layout/mainpage1.xml
@@ -35,7 +35,7 @@
             android:id="@+id/textView11"
             android:layout_width="208dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:fontFamily="serif"
             android:text="@string/enter"
             android:textAlignment="center"
@@ -56,21 +56,21 @@
             android:id="@+id/textView2"
             android:layout_width="208dp"
             android:layout_height="31dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:text="@string/type"
             android:textAlignment="gravity"
             android:textColor="@color/design_default_color_secondary_variant"
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/editTextText"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/selectType"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:ems="10"
-            android:hint="@string/sale"
-            android:inputType="text" />
+            android:textAlignment="center"
+            android:fontFamily="serif"
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -85,25 +85,25 @@
             android:id="@+id/textView5"
             android:layout_width="209dp"
             android:layout_height="32dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:text="@string/name1"
             android:textAlignment="textStart"
             android:textColor="@color/design_default_color_secondary_variant"
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/editTextText2"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/selectAgent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/use"
-            android:importantForAutofill="no"
-            tools:ignore="TextFields" />
+            android:textAlignment="center"
+            android:fontFamily="serif"
+            android:textSize="18sp"
+            android:textStyle="bold"  />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/et_sixth"
+        android:id="@+id/et_ten"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="280dp"
@@ -113,7 +113,7 @@
             android:id="@+id/textView6"
             android:layout_width="211dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:text="@string/invoice"
             android:textAlignment="textStart"
             android:textColor="@color/design_default_color_secondary_variant"
@@ -122,20 +122,48 @@
             tools:layout_marginLeft="10dp" />
 
         <EditText
-            android:id="@+id/editTextText3"
+            android:id="@+id/description_of_invoice"
             android:layout_width="196dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/invoice"
-            android:inputType="text" />
+            android:inputType="text"
+            android:autofillHints="" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/et_third"
+        android:id="@+id/ll_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="350dp"
+        android:gravity="center"
+        android:layout_marginTop="320dp"
+        android:background="#EFF3F4">
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_marginRight="50dp"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/openDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#90C7F3"
+            android:onClick="openCalender"
+            android:text="@string/openDate"
+            android:textColor="@color/ic_lap_background"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="250dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/et_seven"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="400dp"
         android:background="#EFF3F4"
         android:orientation="horizontal">
 
@@ -143,7 +171,7 @@
             android:id="@+id/textView"
             android:layout_width="208dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:fontFamily="serif"
             android:text="@string/details"
             android:textAlignment="center"
@@ -156,7 +184,7 @@
         android:id="@+id/et_sixth"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_marginTop="375dp"
+        android:layout_marginTop="425dp"
         android:background="#D5E1E6"
         android:backgroundTint="#EFF3F4">
 
@@ -164,7 +192,7 @@
             android:id="@+id/textView9"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_weight="10"
             android:text="@string/mat"
             android:textAlignment="center" />
@@ -173,7 +201,7 @@
             android:id="@+id/textView8"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_weight="2"
             android:text="@string/number"
             android:textAlignment="center" />
@@ -189,9 +217,9 @@
 
     <LinearLayout
         android:id="@+id/et_sevenn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="440dp"
         android:background="#EFF3F4"
         android:orientation="horizontal">
 
@@ -203,41 +231,44 @@
             android:ems="10"
             android:hint="@string/mat"
             android:inputType="text"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:autofillHints="" />
 
         <EditText
-            android:id="@+id/editTextNumber"
-            android:layout_width="180dp"
+            android:id="@+id/et_number_of_invoice_details"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:autofillHints=""
             android:ems="10"
             android:hint="@string/number"
             android:inputType="number"
             android:textAlignment="center" />
 
         <EditText
-            android:id="@+id/editTextNumber2"
+            android:id="@+id/et_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:hint="@string/price1"
-            android:inputType="number"
-            android:textAlignment="center" />
+            android:inputType="numberDecimal"
+            android:textAlignment="center"
+            android:autofillHints="" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/et_sixx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="440dp"
+        android:layout_marginTop="485dp"
         android:background="#EFF3F4">
 
         <TextView
             android:id="@+id/textView66"
             android:layout_width="133dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="15dp"
             android:text="@string/total1"
             android:textAlignment="center"
@@ -246,31 +277,57 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editTextText33"
+            android:id="@+id/et_total"
             android:layout_width="248dp"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:autofillHints="@string/total1"
             android:ems="10"
             android:hint="@string/total1"
-            android:inputType="text" />
+            android:inputType="numberDecimal" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_isBuy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="530dp"
+        android:background="#EFF3F4">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:text="@string/is_buy"
+            android:layout_weight="20.0"
+            />
+
+        <Switch
+            android:id="@+id/switch_is_buy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="570dp"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/button22"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#90C7F3"
+            android:onClick="onClickSaveOrder"
             android:text="@string/Save"
             android:textColor="@color/ic_lap_background"
             android:textStyle="bold"
-            android:backgroundTint="#90C7F3"
             tools:layout_editor_absoluteX="411dp" />
 
         <Button
@@ -293,6 +350,8 @@
             tools:layout_editor_absoluteX="411dp" />
 
     </LinearLayout>
+
+
 
 
 </RelativeLayout>
