--- a/app/src/main/res/layout/mainpage1.xml
+++ b/app/src/main/res/layout/mainpage1.xml
@@ -9,6 +9,21 @@
     tools:context=".mainpage1"
     tools:layout_editor_absoluteY="89dp">
 
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        >
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:isScrollContainer="true"
+        >
+
     <LinearLayout
         android:id="@+id/et_second"
         android:layout_width="wrap_content"
@@ -27,7 +42,6 @@
         android:id="@+id/et_third"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
         android:background="#EFF3F4"
         android:orientation="horizontal">
 
@@ -48,13 +62,12 @@
         android:id="@+id/et_forth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
         android:background="#EFF3F4"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="208dp"
+            android:layout_width="209dp"
             android:layout_height="31dp"
             android:layout_marginStart="10dp"
             android:text="@string/type"
@@ -66,7 +79,7 @@
         <Spinner
             android:id="@+id/selectType"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:textAlignment="center"
             android:fontFamily="serif"
             android:textSize="18sp"
@@ -77,7 +90,6 @@
         android:id="@+id/et_fifth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
         android:background="#EFF3F4"
         android:orientation="horizontal">
 
@@ -106,7 +118,6 @@
         android:id="@+id/et_ten"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="280dp"
         android:background="#EFF3F4">
 
         <TextView
@@ -137,13 +148,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="320dp"
         android:background="#EFF3F4">
 
         <TextView
             android:id="@+id/tv_date"
             android:layout_width="wrap_content"
-            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"
             android:layout_height="wrap_content" />
 
         <Button
@@ -163,7 +173,6 @@
         android:id="@+id/et_seven"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
         android:background="#EFF3F4"
         android:orientation="horizontal">
 
@@ -184,7 +193,6 @@
         android:id="@+id/et_sixth"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_marginTop="425dp"
         android:background="#D5E1E6"
         android:backgroundTint="#EFF3F4">
 
@@ -219,20 +227,32 @@
         android:id="@+id/et_sevenn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="440dp"
         android:background="#EFF3F4"
         android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/editTextText4"
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/mat"
-            android:inputType="text"
-            android:textAlignment="center"
-            android:autofillHints="" />
+            android:layout_height="wrap_content">
+
+                <Spinner
+                    android:id="@+id/materialSpinner"
+                    android:layout_height="35dp"
+                    android:layout_width="150dp"
+                    android:visibility="invisible"
+                    />
+
+                <EditText
+                    android:id="@+id/et_material"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/mat"
+                    android:inputType="text"
+                    android:textAlignment="center"
+                    android:autofillHints=""
+                    android:visibility="visible"
+                    />
+
+        </FrameLayout>
 
         <EditText
             android:id="@+id/et_number_of_invoice_details"
@@ -261,7 +281,6 @@
         android:id="@+id/et_sixx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="485dp"
         android:background="#EFF3F4">
 
         <TextView
@@ -292,11 +311,10 @@
         android:id="@+id/ll_isBuy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="530dp"
         android:background="#EFF3F4">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:text="@string/is_buy"
@@ -316,7 +334,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="570dp"
         android:orientation="vertical">
 
         <Button
@@ -350,8 +367,6 @@
             tools:layout_editor_absoluteX="411dp" />
 
     </LinearLayout>
-
-
-
-
+</LinearLayout>
+    </ScrollView>
 </RelativeLayout>
